<resources>

    <string name="app_name">Budgeting App</string>
    <string name="ui_home">Home</string>
    <string name="ui_details">Details</string>
    <string name="ui_view_all">View All</string>
    <string name="ui_all_transactions">All Transactions</string>
    <string name="ui_new_transaction">New Transaction</string>
    <string name="ui_edit_transaction">Edit Transaction</string>
    <string name="add_new">Add New Transaction</string>
    <string name="hello_home_fragment">Hello Home!</string>
    <string name="hello_details_fragment">Hello Details!</string>
    <string name="hello_input_fragment">Hello Input!</string>
    <string name="income">Income: </string>
    <string name="debt">Debt: </string>
    <string name="bills">Bills: </string>
    <string name="savings">Savings: </string>
    <string name="investments">Investments: </string>
    <string name="other">Other: </string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="categories">Categories</string>
    <string-array name="categories">
        <item>Income</item>
        <item>Housing</item>
        <item>Food</item>
        <item>Medical</item>
        <item>Transportation</item>
        <item>Insurance</item>
        <item>Clothing</item>
        <item>Child Care</item>
        <item>Credit Cards</item>
        <item>Loans</item>
        <item>Personal</item>
        <item>Recreation and Entertainment</item>
        <item>Church and Charities</item>
        <item>Gifts</item>
        <item>Savings</item>
        <item>Investments</item>
        <item>Miscellaneous</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_amount">$0.00</string>
    <string name="delete_question">Delete This?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>